Adicionar seção sobre nós e localização da clínica

--- a/index.html
+++ b/index.html
@@ -20,26 +20,44 @@ layout: default
 {% endcomment %} 
 
 
-<!-- <section>
-  <h2 id="nosssa-loja"> 
-    Nossa clínica
-  </h2>
-  <div>
-    Blah blah nossa página aqui, Blah blah nossa página aqui.  Blah blah nossa página aqui, Blah blah nossa página aqui. Blah blah nossa página aqui, Blah blah nossa página aqui. Blah blah nossa página aqui, Blah blah nossa página aqui. Blah blah nossa página aqui, Blah blah nossa página aqui. Blah blah nossa página aqui, Blah blah nossa página aqui.  
-  </div>
-</section>
-
-
 <section>
-  <h2 id="sobre-nós"> 
+  <h2 id="sobre"> 
     Sobre nós
   </h2>
-  <div>
-  Blah blah nossa página aqui, Blah blah nossa página aqui.  Blah blah nossa página aqui, Blah blah nossa página aqui. Blah blah nossa página aqui, Blah blah nossa página aqui. Blah blah nossa página aqui, Blah blah nossa página aqui. Blah blah nossa página aqui, Blah blah nossa página aqui. Blah blah nossa página aqui, Blah blah nossa página aqui. 
- 
-  </div>
+  <p>O nome CloudSkin surgiu do conceito de "pele de nuvem", amplamente conhecido no ramo da beleza.
+    Esse conceito reflete perfeitamente nosso ideal: cada detalhe, tanto na clínica quanto nos
+    tratamentos, é pensado para realçar a essência única de cada cliente, respeitando e valorizando
+    sua beleza natural e suas características individuais.</p>
+  <h3>Missão</h3>
+  <p>Promover autoestima, confiança e saúde, preservando a beleza natural de cada um.</p>
+  <h3>Visão</h3> 
+  <p>Ser referência em serviços estéticos personalizados, priorizando o bem-estar e a experiência única de cada cliente.</p>
+  <h3>Valores</h3>
+  <p>
+    <ul>
+      <li>Respeito</li>
+      <li>Ética</li>
+      <li>Empatia</li>
+      <li>Responsabilidade</li>
+      <li>Autenticidade</li>
+    </ul>
+  </p>
 </section>
 
+<section>
+  <h2 id="clinica"> 
+    Nossa clínica
+  </h2>
+  <p>Localizada no bairro Santa Mônica em Florianópolis, 
+    ao lado do Shopping Villa Romana, a CloudSkin Estética Natural
+    é facilmente acessível de qualquer lugar na Grande Florianópolis.
+  </p>
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.069116036599!2d-48.51564307401111!3d-27.591386726249382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527390050c234b9%3A0x30450757237b8859!2sCloudskin!5e0!3m2!1spt-BR!2sbr!4v1729706336223!5m2!1spt-BR!2sbr" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
+
+
+<!--
 <section>
   <h2 id="procedimentos"> 
     Procedimentos
