Adding logo to about us and adding gradient line below headers

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@ layout: default
 
 
 <section>
-  <h2 id="sobre"> 
+  <h3 id="sobre"> 
     Sobre nós
-  </h2>
-  <p>O nome CloudSkin surgiu do conceito de "pele de nuvem", amplamente conhecido no ramo da beleza.
+  </h3>
+  <p><img class="cloudskin-logo" src="/images/cloud-face.png" alt="" /> O nome CloudSkin surgiu do conceito de "pele de nuvem", amplamente conhecido no ramo da beleza.
     Esse conceito reflete perfeitamente nosso ideal: cada detalhe, tanto na clínica quanto nos
     tratamentos, é pensado para realçar a essência única de cada cliente, respeitando e valorizando
-    sua beleza natural e suas características individuais.</p>
-  <h3>Missão</h3>
+    sua beleza natural e suas características individuais. </p>
+  <h4>Missão</h4>
   <p>Promover autoestima, confiança e saúde, preservando a beleza natural de cada um.</p>
-  <h3>Visão</h3> 
+  <h4>Visão</h4> 
   <p>Ser referência em serviços estéticos personalizados, priorizando o bem-estar e a experiência única de cada cliente.</p>
-  <h3>Valores</h3>
+  <h4>Valores</h4>
   <p>
     <ul>
       <li>Respeito</li>
@@ -45,19 +45,18 @@ layout: default
 </section>
 
 <section>
-  <h2 id="clinica"> 
+  <h3 id="clinica"> 
     Nossa clínica
-  </h2>
+  </h3>
   <p>Localizada no bairro Santa Mônica em Florianópolis, 
     ao lado do Shopping Villa Romana, a CloudSkin Estética Natural
-    é facilmente acessível de qualquer lugar na Grande Florianópolis.
+    é facilmente acessível de qualquer lugar na Grande Florianópolis. 
   </p>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.069116036599!2d-48.51564307401111!3d-27.591386726249382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527390050c234b9%3A0x30450757237b8859!2sCloudskin!5e0!3m2!1spt-BR!2sbr!4v1729706336223!5m2!1spt-BR!2sbr" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
 
 </div>
 
-  <h4>Localização</h4>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.069116036599!2d-48.51564307401111!3d-27.591386726249382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527390050c234b9%3A0x30450757237b8859!2sCloudskin!5e0!3m2!1spt-BR!2sbr!4v1729706336223!5m2!1spt-BR!2sbr" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</section>
 <!-- Só para fazer um commit -->
 
 <!--
@@ -71,5 +70,4 @@ layout: default
       <p>O Ultrassom Microfocado é um tratamento para flacidez tissular que estimula a produção de colágeno, elastina e fibroblastos. O equipamento gera pontos de micro coagulação induzindo um processo inflamatório desde o smas até a camada superficial da pele onde haverá produção de colágeno, atua de dentro para fora com a redução de marcas de expressão, rugas e na melhora da textura e firmeza da pele, resultando em um lifting facial sem cortes.</p>
     </div>
   </div>
-
 </section> -->
