Consertar tamanho do mapa, adicionar carrossel.  Remover imagem cloudskin do texto.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
   <h3 id="sobre"> 
     Sobre nós
   </h3>
-  <p><img class="cloudskin-logo" src="/images/cloud-face.png" alt="" /> O nome CloudSkin surgiu do conceito de "pele de nuvem", amplamente conhecido no ramo da beleza.
+  <p> O nome CloudSkin surgiu do conceito de "pele de nuvem", amplamente conhecido no ramo da beleza.
     Esse conceito reflete perfeitamente nosso ideal: cada detalhe, tanto na clínica quanto nos
     tratamentos, é pensado para realçar a essência única de cada cliente, respeitando e valorizando
     sua beleza natural e suas características individuais. </p>
@@ -45,15 +45,38 @@ layout: default
 </section>
 
 <section>
-  <h3 id="clinica"> 
-    Nossa clínica
-  </h3>
+  <h3 id="clinica">Nossa clínica</h3>
   <p>Localizada no bairro Santa Mônica em Florianópolis, 
     ao lado do Shopping Villa Romana, a CloudSkin Estética Natural
     é facilmente acessível de qualquer lugar na Grande Florianópolis. 
   </p>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.069116036599!2d-48.51564307401111!3d-27.591386726249382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527390050c234b9%3A0x30450757237b8859!2sCloudskin!5e0!3m2!1spt-BR!2sbr!4v1729706336223!5m2!1spt-BR!2sbr" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  
+  <div class="responsive-iframe-container">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.069116036599!2d-48.51564307401111!3d-27.591386726249382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527390050c234b9%3A0x30450757237b8859!2sCloudskin!5e0!3m2!1spt-BR!2sbr!4v1729706336223!5m2!1spt-BR!2sbr" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div> 
+
+  <h3 id="clinica">Conheça</h3>
+
+  <div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide"><img src="/images/carousel/cloudskin-entrada.jpg"></div>
+      <div class="swiper-slide"><img src="/images/carousel/cloudskin-corredor.jpg"></div>
+      <div class="swiper-slide"><img src="/images/carousel/cloudskin-fachada.jpg"></div>
+      <div class="swiper-slide"><img src="/images/carousel/sala-estetica-1.jpeg"></div>
+      <div class="swiper-slide"><img src="/images/carousel/sala-estetica-2.jpeg"></div>
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+  
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  
+  </div>
 </section>
+
 
 </div>
 
