Adicionar serviços e fazer MVV serem 3 colunas em telas grandes.
Remove a wrapper div around entire page; this will allow for different bg covering the full page for each section.

Also started using IntelliJ, added to .gitignore so it doesn't try to commit the settings files.

--- a/index.html
+++ b/index.html
@@ -17,43 +17,55 @@ layout: default
     </article>
   {% endfor %}
 </div>
-{% endcomment %} 
+{% endcomment %}
 
 
 <section>
-  <h3 id="sobre"> 
+  <h3 id="sobre">
     Sobre nós
   </h3>
   <p> O nome CloudSkin surgiu do conceito de "pele de nuvem", amplamente conhecido no ramo da beleza.
     Esse conceito reflete perfeitamente nosso ideal: cada detalhe, tanto na clínica quanto nos
     tratamentos, é pensado para realçar a essência única de cada cliente, respeitando e valorizando
     sua beleza natural e suas características individuais. </p>
-  <h4>Missão</h4>
-  <p>Promover autoestima, confiança e saúde, preservando a beleza natural de cada um.</p>
-  <h4>Visão</h4> 
-  <p>Ser referência em serviços estéticos personalizados, priorizando o bem-estar e a experiência única de cada cliente.</p>
-  <h4>Valores</h4>
-  <p>
-    <ul>
-      <li>Respeito</li>
-      <li>Ética</li>
-      <li>Empatia</li>
-      <li>Responsabilidade</li>
-      <li>Autenticidade</li>
-    </ul>
-  </p>
+
+  <div class="sobre-ct">
+    <div class="sobre">
+      <h4>Missão</h4>
+      <p>Promover autoestima, confiança e saúde, preservando a beleza natural de cada um.</p>
+    </div>
+
+    <div class="sobre">
+      <h4>Visão</h4>
+      <p>Ser referência em serviços estéticos personalizados, priorizando o bem-estar e a experiência única de cada
+        cliente.</p>
+    </div>
+
+    <div>
+      <h4>Valores</h4>
+      <p>
+        <ul>
+          <li>Respeito</li>
+          <li>Ética</li>
+          <li>Empatia</li>
+          <li>Responsabilidade</li>
+          <li>Autenticidade</li>
+        </ul>
+      </p>
+    </div>
+  </div>
 </section>
 
-<section>
+<section class="clinica">
   <h3 id="clinica">Nossa clínica</h3>
-  <p>Localizada no bairro Santa Mônica em Florianópolis, 
+  <p>Localizada no bairro Santa Mônica em Florianópolis,
     ao lado do Shopping Villa Romana, a CloudSkin Estética Natural
-    é facilmente acessível de qualquer lugar na Grande Florianópolis. 
+    é facilmente acessível de qualquer lugar na Grande Florianópolis.
   </p>
-  
-  <div class="responsive-iframe-container">
+
+<!--  <div class="responsive-iframe-container">-->
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.069116036599!2d-48.51564307401111!3d-27.591386726249382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527390050c234b9%3A0x30450757237b8859!2sCloudskin!5e0!3m2!1spt-BR!2sbr!4v1729706336223!5m2!1spt-BR!2sbr" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div> 
+<!--  </div>-->
 
   <h3 id="clinica">Conheça</h3>
 
@@ -69,28 +81,119 @@ layout: default
     </div>
     <!-- If we need pagination -->
     <div class="swiper-pagination"></div>
-  
+
     <!-- If we need navigation buttons -->
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
-  
+
   </div>
 </section>
 
-
-</div>
-
-<!-- Só para fazer um commit -->
-
-<!--
 <section>
-  <h2 id="procedimentos"> 
-    Procedimentos
-  </h2>
-  <div class="card">
-    <div class="card-container">
-      <h4>Ultrassom Microfocado e Macrofocado</h4>
-      <p>O Ultrassom Microfocado é um tratamento para flacidez tissular que estimula a produção de colágeno, elastina e fibroblastos. O equipamento gera pontos de micro coagulação induzindo um processo inflamatório desde o smas até a camada superficial da pele onde haverá produção de colágeno, atua de dentro para fora com a redução de marcas de expressão, rugas e na melhora da textura e firmeza da pele, resultando em um lifting facial sem cortes.</p>
+  <h3 id="servicos">
+    Serviços
+  </h3>
+
+  <div class="card-container">
+
+    <div class="card">
+      <h4>Laser Thulium (Pisom)</h4>
+      <p>Laser de alta precisão utilizado para rejuvenescimento e clareamento da pele, tratando manchas e melhorando a
+        textura e o viço. Também é eficaz para uniformizar o tom da pele.</p>
     </div>
+
+    <div class="card">
+      <h4>Toxina Botulínica</h4>
+      <p>Conhecida popularmente como Botox, a toxina botulínica é usada para suavizar rugas e linhas de expressão,
+        proporcionando um aspecto rejuvenescido e descansado. Ela bloqueia temporariamente a ação muscular, prevenindo a
+        formação de novas rugas.
+      </p>
+    </div>
+
+    <div class="card">
+      <h4>Ultrassom Microfocado e Macrofocado</h4>
+      <p> Este procedimento utiliza ondas de ultrassom para alcançar diferentes camadas da pele, estimulando a
+        produção de colágeno. O ultrassom microfocado é ideal para lifting facial, melhorando a firmeza e o
+        contorno. Já o macrofocado é utilizado em áreas corporais para combater a flacidez e promover firmeza.</p>
+    </div>
+
+    <div class="card">
+      <h4>Preenchimento com Ácido Hialurônico</h4>
+      <p>Este tratamento utiliza ácido hialurônico para preencher áreas do rosto que perderam volume, como lábios, maçãs
+        do rosto e olheiras. Também é eficaz para redefinir o contorno facial e suavizar sulcos e linhas profundas,
+        trazendo mais harmonia ao rosto.
+      </p>
+    </div>
+
+    <div class="card">
+      <h4>Bioestimulador de Colágeno</h4>
+      <p>Aplicado nas camadas profundas da pele, o bioestimulador estimula a produção natural de colágeno, combatendo a
+        flacidez e promovendo firmeza e rejuvenescimento. É ideal para áreas como rosto, pescoço, colo, mãos, braços,
+        abdômen, coxas e glúteos.</p>
+    </div>
+    <div class="card">
+      <h4>Microagulhamento</h4>
+      <p>Técnica que utiliza agulhas finas para criar microperfurações na pele, estimulando a regeneração celular e a
+        produção de colágeno. O procedimento é eficaz para tratar cicatrizes de acne, poros dilatados, melasma e para
+        melhorar a textura da pele.</p>
+    </div>
+    <div class="card">
+      <h4>Depilação a LED</h4>
+      <p>Procedimento moderno e menos agressivo que utiliza a luz de LED para enfraquecer os folículos pilosos, reduzindo
+        o crescimento dos pelos de forma duradoura.</p>
+    </div>
+    <div class="card">
+      <h4>Skinbooster</h4>
+      <p>O skinbooster é uma hidratação profunda com ácido hialurônico injetável, ideal para revitalizar peles
+        desidratadas e melhorar a elasticidade. Promove um aspecto saudável e viçoso, além de suavizar linhas finas.</p>
+    </div>
+    <div class="card">
+      <h4>Limpeza de Pele</h4>
+      <p>Procedimento essencial para remover impurezas, células mortas e excesso de oleosidade. A limpeza de pele deixa a
+        pele mais saudável e preparada para absorver melhor outros tratamentos.</p>
+    </div>
+    <div class="card">
+      <h4>Intradermoterapia</h4>
+      <p>Consiste na aplicação de ativos específicos diretamente na camada superficial da pele para tratar gordura
+        localizada, celulite e flacidez. Os resultados incluem a redução de medidas e uma pele mais firme.</p>
+    </div>
+    <div class="card">
+      <h4>Criofrequência</h4>
+      <p>A criofrequência combina frio e radiofrequência para estimular a produção de colágeno e elastina, tratando
+        flacidez e gordura localizada. É eficaz para melhorar a firmeza da pele e redefinir contornos.</p>
+    </div>
+    <div class="card">
+      <h4>Criolipólise</h4>
+      <p>Técnica que congela as células de gordura para eliminá-las naturalmente pelo corpo, ideal para redução de medidas
+        em áreas com gordura localizada, como abdômen, flancos e coxas.</p>
+    </div>
+    <div class="card">
+      <h4>Massagem Modeladora</h4>
+      <p>Técnica de massagem que utiliza movimentos intensos para melhorar a circulação e a oxigenação dos tecidos,
+        ajudando a reduzir medidas e a modelar o corpo.</p>
+    </div>
+    <div class="card">
+      <h4>Drenagem Linfática</h4>
+      <p>Massagem suave que estimula o sistema linfático, reduzindo a retenção de líquidos e toxinas. A drenagem linfática
+        é excelente para combater o inchaço e melhorar a circulação.</p>
+    </div>
+    <div class="card">
+      <h4>Massagem Relaxante</h4>
+      <p>Técnica que utiliza movimentos suaves e envolventes para relaxar a musculatura, aliviar o estresse e proporcionar
+        bem-estar e tranquilidade.</p>
+    </div>
+    <div class="card">
+      <h4>Endolaser</h4>
+      Técnica que utiliza um laser de alta intensidade aplicado internamente, indicado para tratamentos de flacidez e
+      gordura localizada. Atua profundamente na pele, promovendo um efeito lifting e contorno.</p>
+    </div>
+    <div class="card">
+      <h4>Terapia Capilar</h4>
+      <p>Procedimento voltado para estimular o crescimento e fortalecimento dos fios, atuando na saúde do couro cabeludo e
+        combatendo problemas como queda de cabelo e afinamento dos fios. Utiliza ativos e técnicas específicas para
+        melhorar a densidade e a resistência capilar, promovendo cabelos mais saudáveis e volumosos.</p>
+    </div>
+
   </div>
-</section> -->
+  </section>
+
